# kamugram

./: .dockerignore  .env.example  .gitignore  .mise.toml  Dockerfile  Makefile  README.md  docker-compose.yml  natural_development.md  pyproject.toml
spec/: plan.md  spec.md
src/: main.py
src/bot/: keyboards.py
src/bot/handlers/: word_search.py
src/database/: __init__.py  db_manager.py  models.py  seed.py
src/services/: ai_service.py  dictionary_service.py  scraper_service.py
src/utils/: redis_cache.py
