[project]
name = "kamugram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.17.0",
    "aiohappyeyeballs>=2.4.6",
    "aiohttp>=3.11.12",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "frozenlist>=1.5.0",
    "gtts>=2.5.4",
    "idna>=3.10",
    "magic-filter>=1.0.12",
    "multidict>=6.1.0",
    "propcache>=0.2.1",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "soupsieve>=2.6",
    "sqlalchemy>=2.0.38",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "yarl>=1.18.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
